backup_individuals/sjeng/use_undefined_identifier/c0/comp_to_coord
/data/output_dir/patch/sjeng/ida/clang/O0/sjeng-clang-O0/comp_to_coord/src/utils.c:752:24: error: use of undeclared identifier 'unk_429650'
memcpy( type_to_char, &unk_429650, sizeof( type_to_char)); 
                       ^
1 error generated.
make: *** [/data/output_dir/patch/sjeng/ida/clang/O0/sjeng-clang-O0/comp_to_coord/src/obj/utils.o] Error 1
